update final markup

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Layout-03</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="hero">
+        <h1 class="hero__title">Just that simple</h1>
+        <div class="hero__content content">
+          <p class="content__text">
+            Lorem ipsum dolor sit amet, consectetur <br />
+            adipiscing elit. Faucibus in libero risus <br />
+            semper habitant arcu eget.
+          </p>
+          <a href="/" class="content__cta">Get started</a>
+        </div>
+      </div>
+      <div class="hero__image">
+        <img src="./assets/images/hero Image.png" alt="hero image" />
+      </div>
+    </div>
+  </body>
 </html>
